Correction API for emails
